# savvy-tax-assistant

./: .env.example  CLAUDE.md  LICENSE  README.md  ROADMAP.md  architecture.md  changelog.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 74e296bd08d3_create_vector_embeddings_table.py
docs/: README.md  ROADMAP.md
src/savvy/: config.py
src/savvy/api/: __init__.py  app.py  deps.py
src/savvy/api/routers/: chat.py  chat_sessions.py  communications.py  entities.py  persons.py
src/savvy/api/schemas/: chat.py  communications.py  entities.py  persons.py
src/savvy/embedding/: __init__.py  base.py  factory.py  gemini.py  ollama.py
src/savvy/llm/: __init__.py  base.py  factory.py  ollama.py
src/savvy/storage/: __init__.py  db.py  init_db.py  models.py
src/savvy/vectorstore/: __init__.py  base.py  factory.py  namespaces.py  pgvector.py
tests/: conftest.py  test_api_chat.py  test_api_chat_sessions.py  test_api_communications.py  test_api_entities.py  test_api_health.py  test_api_persons.py  test_gemini_embedding.py  test_knowledge_models.py  test_live.py  test_ollama_embedding.py  test_ollama_llm.py  test_pgvector_store.py  test_protocols.py  test_user_domain_models.py  test_vectorstore_namespaces.py
